manifests/applications/b4mad-keycloak/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: b4mad-erdgeschoss
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    allow-http: "false"
spec:
  ingressClassName: openshift-default
  tls:
    - hosts:
        - keycloak.erdgeschoss.b4mad.net
        - admin.keycloak.erdgeschoss.b4mad.net
      secretName: keycloak-tls-secret
  rules:
    - host: keycloak.erdgeschoss.b4mad.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: b4mad-erdgeschoss-service
                port:
                  number: 8443
    - host: admin.keycloak.erdgeschoss.b4mad.net
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: b4mad-erdgeschoss-service
                port:
                  number: 8443
